--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vue-router": "^2.6.0",
+    "vue-router": "^3.0.1",
+    "vue-sweetalert2": "^5.0.5",
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
