--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "axios": "^1.1.3",
     "core-js": "^3.6.5",
+    "export-from-json": "^1.7.0",
     "vue": "^2.6.11",
     "vue-router": "^3.0.1",
     "vue-sweetalert2": "^5.0.5",
-    "vuetify": "^2.6.0"
+    "vuetify": "^2.6.0",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.19.0/xlsx-0.19.0.tgz"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
